data/all_generated_tests/raw_wast_tests/call_indirect_EdgeCaseFailuresinbr_table_4639.wast
;; 8. **Test for Immediate Cycle in `br_table` with Consecutive `call_indirect`**:    - Create an immediate cycle in the target list of `br_table` and verify handling of an immediate call to `call_indirect` in the cycle.    - Constraint: Immediate cyclic behavior in branching.    - Relation: Checks robustness in cyclic conditions impacting indirect calls.

(assert_invalid
  (module
    (type (func))
    (table 1 funcref)
    (func $invalid-cycle 
      (block $outer
        (br_table $outer $outer
          (block 
            (call_indirect (type 0) (i32.const 0))
          )
        )
      )
    )
  )
  "immediate cyclic behavior"
)